--- a/src/component/Layout/DefaultLayout/DefaultLayout.module.scss
+++ b/src/component/Layout/DefaultLayout/DefaultLayout.module.scss
@@ -1,14 +1,17 @@
 .wrapper {
   display: flex;
-  justify-content: center;
+  flex-direction: column;
   align-items: center;
 }
+
 .container {
-  width: 1150px;
+  width: var(--default-layout-header-width);
+  max-width: 100%;
+  // padding: 0 var(--default-layout-horizontal-spacer);
+  // margin-top: var(--default-layout-header-height);
   display: flex;
-
 }
-.content{
-    flex: 1; //lắp đầy khoẳng trống
 
+.content {
+  flex: 1;
 }
