--- a/src/component/Button/Button.module.scss
+++ b/src/component/Button/Button.module.scss
@@ -11,7 +11,7 @@
   cursor: pointer;
   background-color: var(--white);
   user-select: none;
-
+  font-family: 'ProximaNova', sans-serif;
   + .wrapper {
     // các nút cạnh nhau sẽ cách nhau
     margin-left: 14px;
