--- a/src/component/GlobalStyles/GlobalStyles.scss
+++ b/src/component/GlobalStyles/GlobalStyles.scss
@@ -1,33 +1,85 @@
-@import 'normalize.css';
-// @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,500;0,700;1,700&display=swap');
-@import url('https://use.typekit.net/nko5fvg.css');
+@import "normalize.css";
+// @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,500;0,600;0,700;1,700&display=swap');
+@import url("https://use.typekit.net/nko5fvg.css");
 
-*, *::after, *::before{
-    margin: 0;
-    padding: 0;
-    // border: 0;
-    box-sizing: border-box;
+*,
+*::after,
+*::before {
+  margin: 0;
+  padding: 0;
+  // border: 0;
+  box-sizing: border-box;
 }
-:root{
-    --primary: #fe2c55;
-    --black: #000;
-    --white: #fff;
-    --default-layout-header-height : 60px;
-    --default-layout-header-width: 1150px;
+:root {
+  --primary: #fe2c55;
+  --black: #000;
+  --white: #fff;
+  --default-layout-header-height: 60px;
+  --default-layout-header-width: 1150px;
+  --default-layout-horizontal-spacer: 24px;
 
-    --black : #000000cc;
-    --text-color : #333;
-
+  --black: #000000cc;
+  --text-color: #161823;
 }
-html{
-font-size: 62.5%;
-
+html {
+  font-size: 62.5%;
 }
 
 body {
-    font-family: ibm-plex-sans, sans-serif;
+  font-family: 'ProximaNova', sans-serif;
+  font-size: 1.6rem;
+  line-height: 1.5;
+  text-rendering: optimizespeed;
+}
+button,
+input,
+[tabindex] {
+  outline: one;
+  border: none;
+}
+
+a[href] {
+  color: var(--text-color);
+  text-decoration: none;
+}
+//fonts emmbeded
+@font-face {
+  font-family: ProximaNova;
+  font-weight: 700;
+  src: url(../../assets/Font/Proxima-Nova-Bold.woff);
+}
+@font-face {
+   font-family: ProximaNova;
+   font-weight: 400;
+   src: url(../../assets/Font/Proxima-Nova-Regular.woff2);
+ }
+ @font-face {
+   font-family: ProximaNova;
+   font-weight: 600;
+   src: url(../../assets/Font/ProximaNova-Semibold.woff2);
+ }
+ @font-face {
+   font-family: SofiaPro;
+   font-weight: 700;
+   src: url(../../assets/Font/sofiapro-bold.woff);
+ }
+
+// custom tippy
+body {
+  .tippy-box {
+    border-radius: 8px;
+    font-weight: 600;
     font-size: 1.6rem;
-    line-height: 1.5;
-    text-rendering: optimizespeed;
-   
+    line-height: 2.2rem;
+    background-color: rgba(84, 84, 84, 0.92);
+  }
+  .tippy-arrow {
+    color: rgba(84, 84, 84, 0.92);
+  }
+  .tippy-content {
+    padding: 8px 9px;
+  }
+  .tippy-box[data-placement^="bottom"] > .tippy-arrow::before {
+    top: -8px;
+  }
 }
