--- a/src/component/Layout/components/Header/Header.module.scss
+++ b/src/component/Layout/components/Header/Header.module.scss
@@ -1,13 +1,3 @@
-button,
-input,
-[tabindex] {
-  outline: one;
-  border: none;
-}
-a[href] {
-  color: var(--text-color);
-  // text-decoration: underline;
-}
 .wrapper {
   --search-border-radius: 92px;
   --search-height: 46px;
@@ -24,7 +14,7 @@ a[href] {
 .inner {
   height: 100%;
   width: var(--default-layout-header-width);
-  // background-color: #ccc;
+  padding: 0 var(--default-layout-horizontal-spacer);
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -105,11 +95,46 @@ a[href] {
     background: rgba(22, 24, 35, 0.06);
   }
 }
-
-.more-btn{
+//Action
+.action {
+  display: flex;
+  align-items: center;
+}
+.action-btn {
+  position: relative;
+  display: flex;
+  font-size: 2.2rem;
+  color: #161823;
+  background-color: transparent;
+  padding: 4px 10px;
+  cursor: pointer;
+}
+.badge {
+  position: absolute;
+  top: -3px;
+  right: 0px;
+  padding: 0px 6px;
+  height: 2rem;
+  line-height: 2rem;
+  border-radius: 10px;
+  font-size: 1.4rem;
+  font-weight: 600;
+  color: var(--white);
+  font-family: var(--font-family);
+  background-color: var(--primary);
+}
+.more-btn {
   font-size: 2rem;
   margin-left: 27px;
   padding: 4px 9px;
   background-color: transparent; // bỏ background
+  cursor: pointer;
 }
 
+.user-avatar {
+  width: 32px;
+  height: 32px;
+  object-fit: cover;
+  border-radius: 50%;
+  margin-left: 12px;
+}
