--- a/src/component/GlobalStyles/GlobalStyles.scss
+++ b/src/component/GlobalStyles/GlobalStyles.scss
@@ -17,7 +17,8 @@
   --default-layout-header-height: 60px;
   --default-layout-header-width: 1150px;
   --default-layout-horizontal-spacer: 24px;
-
+  --font-family: 'ProximaNova', sans-serif;
+  
   --black: #000000cc;
   --text-color: #161823;
 }
@@ -37,11 +38,30 @@ input,
   outline: one;
   border: none;
 }
-
-a[href] {
+.button{
+  margin-right: 6px;
+}
+a {
   color: var(--text-color);
   text-decoration: none;
 }
+//Scrollbar css
+
+html *::-webkit-scrollbar{
+  border-radius: 0;
+  width: 8px;
+}
+
+html *::-webkit-scrollbar-thumb{
+  border-radius: 4px;
+  background-color: rgba(0, 0, 0, 0.15);
+}
+
+html *::-webkit-scrollbar-track{
+  border-radius: 0;
+  background-color: rgba(0, 0, 0, 0);
+}
+
 //fonts emmbeded
 @font-face {
   font-family: ProximaNova;
