--- a/src/component/Layout/DefaultLayout/DefaultLayout.module.scss
+++ b/src/component/Layout/DefaultLayout/DefaultLayout.module.scss
@@ -5,11 +5,13 @@
 }
 
 .container {
+  display: flex;
+  text-align: center;
   width: var(--default-layout-header-width);
   max-width: 100%;
   // padding: 0 var(--default-layout-horizontal-spacer);
   // margin-top: var(--default-layout-header-height);
-  display: flex;
+  margin-top: var(--default-layout-header-height);
 }
 
 .content {
