--- a/src/component/Layout/components/Header/Header.module.scss
+++ b/src/component/Layout/components/Header/Header.module.scss
@@ -1,30 +1,49 @@
 .wrapper {
   --search-border-radius: 92px;
   --search-height: 46px;
-  --search-top-space: 9px;
-  --search-button: 55px;
+  --search-top-spacer: 9px;
+  --search-button-width: 52px;
 
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 10;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
   width: 100%;
   height: var(--default-layout-header-height);
   box-shadow: 0px 1px 1px rgb(0 0 0 / 12%);
-  display: flex;
-  justify-content: center;
-  //   align-items: center;\
+  background-color: var(--white);
 }
+
 .inner {
   height: 100%;
-  width: var(--default-layout-header-width);
+  width: var( --default-layout-header-width);
   padding: 0 var(--default-layout-horizontal-spacer);
   display: flex;
   align-items: center;
   justify-content: space-between;
 }
 
-//Action
-.action {
+.logo-link {
+  display: flex;
+}
+
+// Actions
+.actions {
   display: flex;
   align-items: center;
 }
+
+.more-btn {
+  font-size: 2rem;
+  margin-left: 28px;
+  padding: 4px 8px;
+  background-color: transparent;
+  cursor: pointer;
+}
+
 .action-btn {
   position: relative;
   display: flex;
@@ -34,6 +53,7 @@
   padding: 4px 10px;
   cursor: pointer;
 }
+
 .badge {
   position: absolute;
   top: -3px;
@@ -48,18 +68,12 @@
   font-family: var(--font-family);
   background-color: var(--primary);
 }
-.more-btn {
-  font-size: 2rem;
-  margin-left: 27px;
-  padding: 4px 9px;
-  background-color: transparent; // bỏ background
-  cursor: pointer;
-}
 
 .user-avatar {
   width: 32px;
   height: 32px;
   object-fit: cover;
   border-radius: 50%;
-  margin-left: 12px;
+  margin-left: 14px;
+  cursor: pointer;
 }
