--- a/src/component/Layout/components/Search/Search.module.scss
+++ b/src/component/Layout/components/Search/Search.module.scss
@@ -1,95 +1,92 @@
 .search,
 .search-result {
-    width: 361px;
-}
+  width: 361px;
 
+  --search-top-space: 9px;
+  --search-button:52px;
+  --search-height: 46px
+}
 .search {
-    position: relative;
-    height: var(--search-height);
-    padding-left: 16px;
-    display: flex;
-    background-color: rgba(22, 24, 35, 0.06);
-    border-radius: var(--search-border-radius);
-    border: 1.5px solid transparent;
+  position: relative;
+  height: var(--search-height);
+  display: flex;
+  align-items: center;
+  padding-left: 16px;
+  background: rgba(22, 24, 35, 0.06);
+  border-radius: var(--search-border-radius);
+  border: 1px solid white;
 
-    input {
-        flex: 1;
-        height: 100%;
-        padding-right: 40px;
-        color: var(--black);
-        font-size: 1.6rem;
-        caret-color: var(--primary);
-        background-color: transparent;
-        font-family: var(--font-family);
-    }
-//màu dấu nháy
-
-//khi có chữ ở input thì btnSearch sẽ đổi màu
-    input:not(:placeholder-shown) ~ .search-btn {
-        color: rgba(22, 24, 35, 0.75);
-    }
-
-    &::after {
-        content: '';
-        position: absolute;
-        top: var(--search-top-spacer);
-        right: var(--search-button-width);
-        width: 1px;
-        height: calc(var(--search-height) - var(--search-top-spacer) * 2);
-        background-color: rgba(22, 24, 35, 0.12);
-    }
-
-    &:focus-within {
-        border-color: rgba(22, 24, 35, 0.2);
-    }
-}
-
-.search-title {
-    padding: 5px 12px;
-    font-size: 1.4rem;
-    font-weight: 600;
-    color: rgba(22, 24, 35, 0.5);
-}
-
-.clear,
-.loading {
-    position: absolute;
-    right: calc(var(--search-button-width) + 16px);
-    top: 50%;
-    transform: translateY(-50%);
-    color: rgba(22, 24, 35, 0.34);
-}
-
-.loading {
-    animation: spinner 0.8s linear infinite;
-}
-
-@keyframes spinner {
-    from {
-        transform: translateY(-50%) rotate(0);
-    }
-    to {
-        transform: translateY(-50%) rotate(360deg);
-    }
-}
-
-.search-btn {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: var(--search-button-width);
+  input {
+    padding-right: 40px;
+    width: 341px;
+    color: var(--black);
+    font-size: 1.6rem;
+    // padding: 12px 0;
     height: 100%;
-    border-top-right-radius: var(--search-border-radius);
-    border-bottom-right-radius: var(--search-border-radius);
-    font-size: 1.8rem;
-    color: rgba(22, 24, 35, 0.34);
+    background-color: transparent;
+    display: flex;
+    outline: none;
+    caret-color: red; //màu dấu nháy
+  }
+  //khi có chữ ở input thì btnSearch sẽ đổi màu
+  input:not(:placeholder-shown) ~ .search-btn {
+    color: rgba(22, 24, 35, 0.75);
+  }
+  &::after {
+    content: "";
+    position: absolute;
+    top: var(--search-top-space);
+    right: var(--search-button);
+    height: calc(var(--search-height) - var(--search-top-space) * 2);
+    width: 1px;
+    background-color: rgba(22, 24, 35, 0.12);
+  }
 
-    &:hover {
-        cursor: pointer;
-        background-color: rgba(22, 24, 35, 0.03);
-    }
+  &:focus-within {
+    border-color: rgba(22, 24, 35, 0.2);
+  }
+}
+.search-title {
+  font-size: 1.4rem;
+  font-weight: 600;
+  color: rgba(22, 24, 35, 0.5);
+}
+.clear-btn,
+.loading {
+  position: absolute;
+  right: calc(var(--search-button) + 0.5rem);
+  top: 50%;
+  transform: translate(-50%,-50%);
+  color: rgba(22, 24, 35, 0.34);
+}
+.clear-btn{
+  margin-bottom: 5px;
+}
+.loading{
+  animation: spinner 1s linear infinite;
+}
+@keyframes spinner {
+  from {
+    transform: translateY(-50%) rotate(0);
+  }
+  to {
+    transform: translateY(-50%) rotate(360deg);
+  }
+}
+.search-btn {
+  width: var(--search-button);
+  height: 100%;
+  border-top-right-radius: var(--search-border-radius);
+  border-bottom-right-radius: var(--search-border-radius);
+  font-size: 1.8rem;
+  color: rgba(22, 24, 35, 0.34);
+  margin-right: 2px;
 
-    &:active {
-        background-color: rgba(22, 24, 35, 0.06);
-    }
+  &:hover {
+    cursor: pointer;
+    background: rgba(22, 24, 35, 0.03);
+  }
+  &:active {
+    background: rgba(22, 24, 35, 0.06);
+  }
 }
